<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Dashboard"
        android:layout_margin="20dp"
        android:textSize="40sp"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:id="@+id/name"
        android:textSize="20sp"
        android:visibility="gone"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/You_are_doing_kotlin"
        android:textSize="40sp"
        android:layout_margin="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Back"
        android:id="@+id/back"
        android:textSize="40sp"
        />

</LinearLayout>