<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_margin="20dp"
        android:textSize="40sp"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:textSize="20sp"
        android:layout_margin="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:id="@+id/name"
        android:textSize="20sp"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_password"
        android:textSize="20sp"
        android:layout_margin="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="numberPassword"
        android:id="@+id/pass"
        android:maxLength="4"
        android:textSize="20sp"
        android:layout_margin="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Next"
        android:id="@+id/check"
        android:textSize="40sp"
        />
</LinearLayout>